tests/Rules/Aria/Fixtures/invalid/aria_invalid_value.html.twig
<div aria-hidden="maybe">bad</div>
